feat: added count endpoint and updated docs
