# docs/swagger.yaml
@@ -128,6 +128,32 @@ paths:
       summary: List GPUs
       tags:
       - gpus
+  /gpus/count:
+    get:
+      description: Returns the total number of GPUs
+      parameters:
+      - description: Provider (e.g., vastai, tensordock, runpod)
+        in: query
+        name: source
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: int
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "502":
+          description: Upstream error
+          schema:
+            type: string
+      summary: Count number of GPUs
+      tags:
+      - gpus
 schemes:
 - https
 - http
